# labsimnum

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  version_config.h.in  version_config.hpp.in
data/: ex10_bests.dat.bak  ex10_bests.dat.old
data/ex04/INPUT_GAS/CONFIG/: config.xyz  velocities.in
data/ex04/INPUT_LIQUID/CONFIG/: config.xyz  velocities.in
data/ex04/INPUT_SOLID/CONFIG/: config.xyz  velocities.in
data/ex04/OUTPUT_EQ_GAS/CONFIG/: config.xyz
data/ex04/OUTPUT_GAS/CONFIG/: config.xyz
data/ex04/OUTPUT_LIQUID/CONFIG/: config.xyz
data/ex04/OUTPUT_SOLID/CONFIG/: config.xyz
data/ex07/OUTPUT_NVE_GAS/CONFIG/: config.xyz
data/ex07/OUTPUT_NVE_LIQUID/CONFIG/: config.xyz
data/ex07/OUTPUT_NVE_SOLID/CONFIG/: config.xyz
data/ex07/OUTPUT_NVT_GAS/CONFIG/: config.xyz
data/ex07/OUTPUT_NVT_LIQUID/CONFIG/: config.xyz
data/ex07/OUTPUT_NVT_SOLID/CONFIG/: config.xyz
exercise_01/: CMakeLists.txt  ex01_1.cpp  ex01_2.cpp  ex01_3.cpp  ex_01.cpp  library.cpp  library.h  library01.cpp  library01.h
exercise_02/: CMakeLists.txt  ex02_1.cpp  ex02_2.cpp  library.cpp  library.h  library02.cpp  library02.h
exercise_03/: CMakeLists.txt  ex03.cpp  library.cpp  library.h  library03.cpp  library03.h
exercise_04/: CMakeLists.txt  ex04.md  ex04_eq.cpp  ex04_prep.cpp  ex04_sim.cpp  ex04_simeq.cpp
exercise_04/OUTPUT/CONFIG/: config.xyz
exercise_05/: CMakeLists.txt  ex05.cpp  library.cpp  library.h
exercise_06/: CMakeLists.txt  ex06.cpp  ex06.md
exercise_07/: CMakeLists.txt  NSL_SIMULATOR.cpp  ex07.md  ex07_2.cpp  ex07_4.cpp  ex07_acc.cpp
exercise_08/: CMakeLists.txt  ex08_1.cpp  ex08_2.cpp  library08.cpp  library08.h
exercise_09/: CMakeLists.txt  battle_royale.cpp  battle_royale.h  ex09.cpp  ex09.md  run.sh
exercise_10/: CMakeLists.txt  ex10.cpp  ex10.md  ex10_2.cpp  run 10_2.sh  run.sh  run10.sh  trials.cpp
fmt/: CMakeLists.txt  fmtlib.h
lib/: CMakeLists.txt  blocking.cpp  blocking.h  random.cpp  random.h  system.cpp  system.h
notebooks/: exercise_01.ipynb  exercise_02.ipynb  exercise_03.ipynb  exercise_04.ipynb  exercise_05.ipynb  exercise_06.ipynb  exercise_07.ipynb  exercise_08.ipynb  exercise_09.ipynb  exercise_10.ipynb  exercise_11.ipynb  exercise_11_1.ipynb  exercise_11_2.ipynb  exercise_11_3.ipynb  exercise_12_1.ipynb  exercise_12_2_3.ipynb
random/: CMakeLists.txt  random.cpp  random.h
